--- a/modulo2/Aula 2.1 - Variáveis - Exercícios/2.1-Variáveis-Exercícios.ipynb
+++ b/modulo2/Aula 2.1 - Variáveis - Exercícios/2.1-Variáveis-Exercícios.ipynb
@@ -30,15 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "23ab7106",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a c e f\n"
+     ]
+    }
+   ],
    "source": [
     "# Preencha o print com as alternativas corretas\n",
     "# separadas por espaços em branco.\n",
     "# Ex: print(\"a b c\")\n",
-    "print(\" \")"
+    "print(\"a c e f\")"
    ]
   },
   {
@@ -68,13 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4371ac7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# preencha o print com sua resposta\n",
-    "print(\" \")"
+    "print(\"7\")"
    ]
   },
   {
@@ -91,13 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "82b5064b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Linha 1 esta errada, pois as variaveis n1 e n2 não foram previamente definidas\n"
+     ]
+    }
+   ],
    "source": [
     "# preencha o print com sua resposta\n",
-    "print(\" \")"
+    "print(\"A Linha 1 esta errada, pois as variaveis n1 e n2 não foram previamente definidas\")"
    ]
   },
   {
@@ -115,13 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "7b9db0c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "# preencha o print com sua resposta\n",
-    "print(\" \")"
+    "print(\"11\")"
    ]
   },
   {
@@ -142,10 +174,18 @@
    "execution_count": null,
    "id": "2dec64ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a linha 2 esta incorreta pois a variavel foi definida do lado direito da equação e não do lado esquerdo como deveria ser. \n"
+     ]
+    }
+   ],
    "source": [
     "# preencha o print com sua resposta\n",
-    "print(\" \")"
+    "print(\"a linha 2 esta incorreta pois a variavel foi definida do lado direito da equação e não do lado esquerdo como deveria ser. \")"
    ]
   },
   {
@@ -160,12 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e1963351",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.333333333333333\n"
+     ]
+    }
+   ],
    "source": [
-    "## Escreva e execute seu código aqui\n"
+    "## Escreva e execute seu código aqui\n",
+    "num1=1\n",
+    "num2=5\n",
+    "num3=10\n",
+    "print((num1+num2+num3)/3)"
    ]
   },
   {
@@ -184,12 +236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "dd4fe7ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a velocidade de 90 km/h é equivalente a seguinte velocidade em m/s: 25.0\n"
+     ]
+    }
+   ],
    "source": [
-    "## Escreva e execute seu código aqui\n"
+    "## Escreva e execute seu código aqui\n",
+    "vkmh=90\n",
+    "vms=vkmh/3.6\n",
+    "print(\"a velocidade de 90 km/h é equivalente a seguinte velocidade em m/s:\", vms)\n"
    ]
   },
   {
@@ -208,18 +271,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "10a6a794",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meu nome é: Ricardo\n"
+     ]
+    }
+   ],
    "source": [
-    "## Escreva e execute seu código aqui\n"
+    "## Escreva e execute seu código aqui\n",
+    "nome=\"Ricardo\"\n",
+    "print(\"Meu nome é:\",nome)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
